Libraries/GTK/src/gtkextra/gtkplotdata.h

void		gtk_plot_data_clone		(GtkPlotData *data,
						 GtkPlotData *copy);
GtkPlotArray *  gtk_plot_data_dimension_set_points(GtkPlotData *data,
						 const gchar *name,
						 gdouble *points);
void		gtk_plot_data_move_gradient		(GtkPlotData *data,
							 gdouble x, gdouble y);
void		gtk_plot_data_set_gradient_size		(GtkPlotData *data,
							 gint size);
void 		gtk_plot_data_reset_gradient_colors 	(GtkPlotData *data);
void            gtk_plot_data_gradient_use_custom_colors(GtkPlotData *data,
                                                         gboolean custom);
gboolean        gtk_plot_data_gradient_custom_colors    (GtkPlotData *data);
void		gtk_plot_data_gradient_autoscale_a	(GtkPlotData *data);
void		gtk_plot_data_gradient_autoscale_da	(GtkPlotData *data);
void		gtk_plot_data_gradient_autoscale_z	(GtkPlotData *data);
void		gtk_plot_data_set_gradient_nth_color	(GtkPlotData *data,
							 guint level,
							 GdkColor *color);
const GdkColor *gtk_plot_data_get_gradient_nth_color	(GtkPlotData *data,
							 guint level);
void		gtk_plot_data_set_gradient_outer_colors	(GtkPlotData *data,
							 const GdkColor *min,
							 const GdkColor *max);
void		gtk_plot_data_get_gradient_outer_colors	(GtkPlotData *data,
							 GdkColor *min,
							 GdkColor *max);
void		gtk_plot_data_gradient_set_style	(GtkPlotData *data,
							 GtkPlotLabelStyle style,
	                                                 gint precision);
void		gtk_plot_data_gradient_set_scale	(GtkPlotData *data,
							 GtkPlotScale scale);
/* Markers */

GtkPlotMarker *	gtk_plot_data_add_marker		(GtkPlotData *data,
							 guint point);
gboolean	gtk_plot_data_remove_marker		(GtkPlotData *data,
							 GtkPlotMarker *marker);
void		gtk_plot_data_remove_markers		(GtkPlotData *data);
void		gtk_plot_data_show_markers		(GtkPlotData *data,
							 gboolean show);
gboolean	gtk_plot_data_markers_visible		(GtkPlotData *data);