Libraries/GTK/src/gtk-extra-plot_data.adb


   procedure Reset_Gradient_Colors (Data : access Gtk_Plot_Data_Record) is
      procedure Internal (Data : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_reset_gradient_colors");
   begin
      Internal (Get_Object (Data));
   end Reset_Gradient_Colors;

   ----------------------------
   -- Set_Gradient_Nth_Color --
   ----------------------------

   procedure Set_Gradient_Nth_Color
     (Data  : access Gtk_Plot_Data_Record;
      Level : Guint;
      Color : Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Data : System.Address; Level : Guint; Color : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_set_gradient_nth_color");
      C : aliased Gdk_Color := Color;
   begin
      Internal (Get_Object (Data), Level, C'Address);
   end Set_Gradient_Nth_Color;

   ----------------------------
   -- Get_Gradient_Nth_Color --
   ----------------------------

   function Get_Gradient_Nth_Color
     (Data  : access Gtk_Plot_Data_Record; Level : Guint)
      return Gdk.Color.Gdk_Color
   is
      function Internal (Data : System.Address; Level : Guint)
         return System.Address;
      pragma Import (C, Internal, "gtk_plot_data_get_gradient_nth_color");

      C : constant Color_Access :=
        Convert (Internal (Get_Object (Data), Level));
   begin
      return C.all;
   end Get_Gradient_Nth_Color;

   -------------------------------
   -- Set_Gradient_Outer_Colors --
   -------------------------------

   procedure Set_Gradient_Outer_Colors
     (Data : access Gtk_Plot_Data_Record;
      Min, Max : Gdk.Color.Gdk_Color)
   is
      procedure Internal (D, Min, Max : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_set_gradient_outer_colors");
      Mi : aliased Gdk_Color := Min;
      Ma : aliased Gdk_Color := Max;
   begin
      Internal (Get_Object (Data), Mi'Address, Ma'Address);
   end Set_Gradient_Outer_Colors;

   --------------------------
   -- Gradient_Autoscale_A --
   --------------------------

   procedure Gradient_Autoscale_A (Data : access Gtk_Plot_Data_Record) is
      procedure Internal (Data : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_gradient_autoscale_a");
   begin
      Internal (Get_Object (Data));
   end Gradient_Autoscale_A;

   ---------------------------
   -- Gradient_Autoscale_Da --
   ---------------------------

   procedure Gradient_Autoscale_Da (Data : access Gtk_Plot_Data_Record) is
      procedure Internal (Data : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_gradient_autoscale_da");
   begin
      Internal (Get_Object (Data));
   end Gradient_Autoscale_Da;

   --------------------------
   -- Gradient_Autoscale_Z --
   --------------------------

   procedure Gradient_Autoscale_Z (Data : access Gtk_Plot_Data_Record) is
      procedure Internal (Data : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_gradient_autoscale_z");
   begin
      Internal (Get_Object (Data));
   end Gradient_Autoscale_Z;

   ------------------------
   -- Gradient_Set_Style --
   ------------------------

   procedure Gradient_Set_Style
     (Data      : access Gtk_Plot_Data_Record;
      Style     : Plot_Label_Style;
      Precision : Gint)
   is
      procedure Internal (D : System.Address; S : Plot_Label_Style; P : Gint);
      pragma Import (C, Internal, "gtk_plot_data_gradient_set_style");
   begin
      Internal (Get_Object (Data), Style, Precision);
   end Gradient_Set_Style;

   ------------------------
   -- Gradient_Set_Scale --
   ------------------------

   procedure Gradient_Set_Scale
     (Data      : access Gtk_Plot_Data_Record;
      Scale     : Plot_Scale)
   is
      procedure Internal (Data : System.Address; Scale : Plot_Scale);
      pragma Import (C, Internal, "gtk_plot_data_gradient_set_scale");
   begin
      Internal (Get_Object (Data), Scale);
   end Gradient_Set_Scale;

   ----------------
   -- Add_Marker --
   ----------------

   function Add_Marker
     (Data : access Gtk_Plot_Data_Record; Point : Guint)
      return Gtk_Plot_Marker
   is
      function Internal (D : System.Address; P : Guint) return Gtk_Plot_Marker;
      pragma Import (C, Internal, "gtk_plot_data_add_marker");
   begin
      return Internal (Get_Object (Data), Point);
   end Add_Marker;

   -------------------
   -- Remove_Marker --
   -------------------

   procedure Remove_Marker
     (Data : access Gtk_Plot_Data_Record; Marker : Gtk_Plot_Marker)
   is
      procedure Internal (Data : System.Address; Marker : Gtk_Plot_Marker);
      pragma Import (C, Internal, "gtk_plot_data_remove_marker");
   begin
      Internal (Get_Object (Data), Marker);
   end Remove_Marker;

   --------------------
   -- Remove_Markers --
   --------------------

   procedure Remove_Markers (Data : access Gtk_Plot_Data_Record) is
      procedure Internal (Data : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_remove_markers");
   begin
      Internal (Get_Object (Data));
   end Remove_Markers;

   ------------------
   -- Show_Markers --
   ------------------

   procedure Show_Markers
     (Data : access Gtk_Plot_Data_Record; Show : Boolean)
   is
      procedure Internal (Data : System.Address; Show : Gboolean);
      pragma Import (C, Internal, "gtk_plot_data_show_markers");
   begin
      Internal (Get_Object (Data), Boolean'Pos (Show));
   end Show_Markers;

   ---------------------
   -- Markers_Visible --
   ---------------------

   function Markers_Visible (Data : access Gtk_Plot_Data_Record)
      return Boolean
   is
      function Internal (Data : System.Address) return Gboolean;
      pragma Import (C, Internal, "gtk_plot_data_markers_visible");
   begin
      return Internal (Get_Object (Data)) /= 0;
   end Markers_Visible;

   -----------
   -- Clone --
   -----------

   procedure Clone
     (Data : access Gtk_Plot_Data_Record;
      Copy : access Gtk_Plot_Data_Record'Class)
   is
      procedure Internal (Data, Copy : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_clone");
   begin
      Internal (Get_Object (Data), Get_Object (Copy));
   end Clone;

   --------------------------
   -- Dimension_Set_Points --
   --------------------------

   procedure Dimension_Set_Points
     (Data   : access Gtk_Plot_Data_Record;
      Name   : String;
      Points : Gdouble_Array_Access)
   is
      procedure Internal
        (Data : System.Address; Name : String; Points : System.Address);
      pragma Import (C, Internal, "gtk_plot_data_dimension_set_points");
      P : System.Address := System.Null_Address;
   begin
      if Points /= null then
         P := Points (Points'First)'Address;
      end if;

      Internal (Get_Object (Data), Name & ASCII.NUL, P);
   end Dimension_Set_Points;

   -------------------
   -- Move_Gradient --
   -------------------

   procedure Move_Gradient
     (Data : access Gtk_Plot_Data_Record; X, Y : Gdouble)
   is
      procedure Internal (Data : System.Address; X, Y : Gdouble);
      pragma Import (C, Internal, "gtk_plot_data_move_gradient");
   begin
      Internal (Get_Object (Data), X, Y);
   end Move_Gradient;

   -----------------------
   -- Set_Gradient_Size --
   -----------------------

   procedure Set_Gradient_Size
     (Data : access Gtk_Plot_Data_Record; Size : Gint)
   is
      procedure Internal (Data : System.Address; Size : Gint);
      pragma Import (C, Internal, "gtk_plot_data_set_gradient_size");
   begin
      Internal (Get_Object (Data), Size);
   end Set_Gradient_Size;

   --------------------------------
   -- Gradient_Use_Custom_Colors --
   --------------------------------

   procedure Gradient_Use_Custom_Colors
     (Data : access Gtk_Plot_Data_Record; Custom : Boolean)
   is
      procedure Internal (Data : System.Address; Custom : Gboolean);
      pragma Import (C, Internal, "gtk_plot_data_gradient_use_custom_colors");
   begin
      Internal (Get_Object (Data), Boolean'Pos (Custom));
   end Gradient_Use_Custom_Colors;

   ----------------------------
   -- Gradient_Custom_Colors --
   ----------------------------

   function Gradient_Custom_Colors
     (Data : access Gtk_Plot_Data_Record) return Boolean
   is
      function Internal (Data : System.Address) return Gboolean;
      pragma Import (C, Internal, "gtk_plot_data_gradient_custom_colors");
   begin
      return Boolean'Val (Internal (Get_Object (Data)));
   end Gradient_Custom_Colors;

   -------------------------------
   -- Get_Gradient_Outer_Colors --
   -------------------------------

   procedure Get_Gradient_Outer_Colors
     (Data     : access Gtk_Plot_Data_Record;
      Min, Max : out Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Data : System.Address;
         MinA, MaxA : out System.Address);
      pragma Import (C, Internal, "gtk_plot_data_get_gradient_outer_colors");

      Mi, Ma : System.Address;
   begin
      Internal (Get_Object (Data), Mi, Ma);
      Min := Convert (Mi).all;
      Max := Convert (Ma).all;
   end Get_Gradient_Outer_Colors;

end Gtk.Extra.Plot_Data;
